2000-07-28  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Installation Directory Variables): New
	section, Eved off from `Preset Output Variables', i.e., was a
	small part of it, grew independent, and is its equal (at least).
	(Coding Style): `$#' padding.
	* Makefile.am (editsh, editpl): Do what the doc says you do: use
	@datadir\@ instead of @''datadir''@.

2000-07-28  Akim Demaille  <akim@epita.fr>

	* aclang.m4 (_AC_PROG_CC_GNU, _AC_PROG_CXX_GNU,
	_AC_PROG_F77_GNU): Use ac_ext.  Use ACEOF instead of EOF.
	(AC_LANG_CONFTEST): New macro.
	(_AC_PROG_CC_G, AC_PROG_CC_C_O, _AC_PROG_CXX_G, AC_PROG_F77_C_O,
	_AC_PROG_F77_V_OUTPUT): Use it.
	* acgeneral.m4 (AC_TRY_CPP, AC_EGREP_CPP, AC_COMPILE_IFELSE,
	AC_LINK_IFELSE, AC_RUN_IFELSE): Likewise.

2000-07-24  Steven G. Johnson  <stevenj@alum.mit.edu>

	* aclang.m4 (AC_F77_FUNC): New macro to give the user a clean
	way of accessing Fortran name-mangling information other than
	through CPP, and without having to know the different possible
	name-mangling schemes.
	* autoconf.texi: Documented AC_F77_FUNC

2000-07-24  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (_AC_CHECK_TYPE_BUILTIN_P): Add `off_t' and
	`size_t' which are often used too.
	Fix a bug which prevents recognition of `bool' and `char'.
	(_AC_CHECK_TYPE_MAYBE_TYPE_P): New macro.
	(AC_CHECK_TYPE): Use it.

2000-07-19  Peter Eisentraut  <peter_e@gmx.net>

	* Makefile.am: Remove INSTALL.txt by maintainer-clean target.

2000-07-19  Akim Demaille  <akim@epita.fr>

	* autoupdate.sh: Typo: s/infile/file/.

2000-07-19  Martin Wilck  <martin@tropos.de>

	* aclang.m4 (AC_F77_NAME_MANGLING): Obsolete, becomes
	_AC_F77_NAME_MANGLING.
	(_AC_F77_NAME_MANGLING): Use independent checks for the
	name mangling of symbols with and without underscores.
	Use algorithm with for loops instead of recursive macro calls.
	(AC_F77_WRAPPERS): Adapt to changes in _AC_F77_NAME_MANGLING.
	* doc/autoconf.texi (Fortran 77 Compiler Characteristics):