@@ -2525,11 +2525,11 @@ define([AC_WARNING_IFELSE],
 # --------------------------------------------------------------
 # Implementation of the loop described above.
 define([_AC_WARNING_IFELSE],
-[ifelse([$4],  [$1],   [$2],
-        [$4],  [all],  [$2],
-        [$4],  [],     [$3],
-        [$4],  [none], [$3],
-        [$4],  [no$1], [$3],
+[ifelse([$4],  [$1],    [$2],
+        [$4],  [all],   [$2],
+        [$4],  [],      [$3],
+        [$4],  [none],  [$3],
+        [$4],  [no-$1], [$3],
         [$0([$1], [$2], [$3], m4_shiftn(4, $@))])])
 
 
