@@ -48,7 +48,7 @@ dubious syntactic constructs
 `all'
 all the warnings
 .TP
-`noCATEGORY'
+`no-CATEGORY'
 turn off the warnings on CATEGORY
 .TP
 `none'
